# aten-ia

./: .dockerignore  .gitignore  AGENTS.md  PLAN_TESTS.md  PORTABILITY_SPEC.md  README.md  plan.md  snapcraft.yaml
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release-binary.yml  release.yml
docker/: Dockerfile.build
man/: aten-ia.1
memvid-agent-core/: Cargo.toml  IMPROVEMENTS_PLAN.md  build.rs  config.json  rustfmt.toml  wrapper.h
memvid-agent-core/.cargo/: config.toml
memvid-agent-core/.github/workflows/: ci.yml
memvid-agent-core/src/: agent.rs  api.rs  books_catalog.rs  chunker.rs  config.rs  context_policy.rs  extractor.rs  feeds.rs  finetune.rs  generation.rs  languages_catalog.rs  lib.rs  main.rs  models.rs  models_catalog.json  models_catalog.rs  prompt.rs  queue.rs  retrieval.rs  session.rs  shutdown.rs  types.rs  utils.rs  web_fetcher.rs
memvid-agent-core/src/llama/: context.rs  ffi.rs  mod.rs
memvid-agent-core/src/memvid/: manifest.rs  mod.rs  playlist.rs  reader.rs  writer.rs
memvid-agent-core/tests/: functional.rs  kv_cache_and_history.rs  writer_integration.rs
scripts/: build-portable.sh  validate-compat.sh
wiki/: Architecture.md  Home.md  Installation.md  Usage.md
