[package]
name = "memvid-agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
memvid-core = "2.0.139"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"
