[package]
name = "aten-ia"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/lordpietre/aten-ia"

[lib]
name = "memvid_agent_core"

[dependencies]
memvid-core = "2.0.139"
zip = { version = "7", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
ureq = { version = "3", features = ["rustls"] }
indicatif = "0.17"
colored = "3"
libc = "0.2"
dotenvy = "0.15"
regex = "1"
pdf-extract = "0.10"
epub = "2"
feed-rs = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"
